# rust_interop_server

./: Cargo.toml
dynlib/: Cargo.toml  build.rs
dynlib/src/: context.rs  handlers.rs  lib.rs  router.rs  uri_handler.rs  utils.rs
main/: Cargo.toml
main/src/: main.rs
