[package]
name = "lib_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
tokio={version="1.15.0", features=["full"]}
async-ffi = "0.3.1"
lazy_static = "1.4.0"
hyper = {version = "0.14.16", features = ["full", "server"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.3"
bytes = "1"
async-trait = "0.1"

[lib]
name = "lib_server"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.20.0"
